--- a/2-student.html
+++ b/2-student.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Student Request</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="4-style.css">
 </head>
 <body>
 
@@ -93,6 +93,6 @@
   </div>
 </div>
 
-<script src="script.js"></script>
+<script src="5-script.js"></script>
 </body>
 </html>
