--- a/3-admin.html
+++ b/3-admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="4-style.css">
 </head>
 <body>
 
@@ -71,6 +71,6 @@
 
 </div>
 
-<script src="admin.js"></script>
+<script src="6-admin.js"></script>
 </body>
 </html>
