Update and rename 1-index.html to a-index.html

--- a/a-index.html
+++ b/a-index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Medha Financial System</title>
-  <link rel="stylesheet" href="4-style.css">
+  <link rel="stylesheet" href="d-style.css">
 </head>
 <body>
 
