--- a/a-index.html
+++ b/a-index.html
@@ -37,7 +37,7 @@
   document.getElementById('adminUrl').style.cursor = 'pointer';
   document.getElementById('adminUrl').onclick = function() {
     const token = generateAdminToken();
-    window.location.href = '3-admin.html?auth=' + token;
+    window.location.href = 'c-admin.html?auth=' + token;
   };
 </script>
 
