--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Medha Financial System</title>
-  <link rel="stylesheet" href="d-style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -37,7 +37,7 @@
   document.getElementById('adminUrl').style.cursor = 'pointer';
   document.getElementById('adminUrl').onclick = function() {
     const token = generateAdminToken();
-    window.location.href = 'c-admin.html?auth=' + token;
+    window.location.href = 'admin.html?auth=' + token;
   };
 </script>
 
