Update and rename c-admin.html to admin.html

--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="d-style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
