--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Medha Financial System</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <p class="subtitle">STUDENT PORTAL</p>
 
     <div class="card-container">
-      <div class="card student" onclick="location.href='student.html'" title="For students to submit requests">
+      <div class="landing-card student" onclick="location.href='student.html'" title="For students to submit requests">
         👩‍🎓 Student Portal
       </div>
     </div>
