--- a/student.html
+++ b/student.html
@@ -68,7 +68,7 @@
     </div>
 
     <textarea id="details" placeholder="Request Details / Links"></textarea>
-    <h4>Payment Details</h4>
+    <h4>Due Date</h4>
     <input type="date" id="dueDate">
 
     <!-- ✅ ATTACHMENT AS DRIVE LINK -->
