--- a/student.html
+++ b/student.html
@@ -45,13 +45,13 @@
  <select id="category" onchange="loadSubCategories()">
     <option value="">Select Category</option>
   </select>
-</div>
 
 <div class="form-row">
   <select id="subCategory">
     <option value="">Select Sub-Category</option>
   </select>
-
+     </div>
+<div class="form-row">
       <select id="paymentMode">
         <option value="">Payment Mode</option>
         <option>Online</option>
